# Substrate-Moloch-V2

pallets/moloch-v2/: Cargo.toml
pallets/moloch-v2/src/: lib.rs  mock.rs
pallets/quadratic-funding/: Cargo.toml
pallets/quadratic-funding/rpc/: Cargo.toml
pallets/quadratic-funding/runtime-api/: Cargo.toml
pallets/quadratic-funding/src/: lib.rs
