[package]
authors = ['DoraFactory <https://github.com/DoraFactory/Substrate-Moloch-v2>']
description = 'FRAME pallet Moloch V1'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'MIT'
name = 'pallet-moloch-v2'
repository = 'https://github.com/DoraFactory/Substrate-Moloch-v2/'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies]
frame-support = { default-features = false, version = '3.0.0' }
frame-system = { default-features = false, version = '3.0.0' }
pallet-balances = { version = "3.0.0", default-features = false}
pallet-timestamp = { version = "3.0.0", default-features = false}
sp-std = { default-features = false, version = '3.0.0' }
sp-runtime = { default-features = false, version = '3.0.0' }
sp-timestamp = { default-features = false, version = '3.0.0' }
serde = { version = "1.0.101", optional = true, features = ["derive"] }


[dev-dependencies]
sp-core = { default-features = false, version = '3.0.0' }
sp-io = { default-features = false, version = '3.0.0' }
sp-runtime = { default-features = false, version = '3.0.0' }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'pallet-balances/std',
    'pallet-timestamp/std',
    	'sp-timestamp/std',

    'serde',
]
